# seraph

./: .gitignore  CLAUDE.md  NEXT_STEPS.md  README.md  docker-compose.dev.yaml  env.dev.example  manage.sh  mcp.sh
backend/: Dockerfile  README.md  conftest.py  main.py  pyproject.toml
backend/config/: settings.py
backend/src/: app.py
backend/src/agent/: factory.py  session.py  strategist.py
backend/src/api/: catalog.py  chat.py  router.py  sessions.py  ws.py
backend/src/goals/: repository.py
backend/src/memory/: vector_store.py
backend/src/models/: schemas.py
backend/src/observer/: insight_queue.py  user_state.py
backend/src/observer/sources/: screen_source.py
backend/src/plugins/: registry.py
backend/src/tools/: browser_tool.py  filesystem_tool.py  mcp_manager.py  shell_tool.py  template_tool.py  web_search_tool.py
backend/src/utils/: background.py
backend/tests/: conftest.py  test_agent.py  test_catalog_api.py  test_chat_api.py  test_consolidator.py  test_e2e_conversation.py  test_goals_api.py  test_goals_repository.py  test_http_mcp_server.py  test_mcp_manager.py  test_onboarding_edge_cases.py  test_plugin_loader.py  test_profile.py  test_seed_config.py  test_session.py  test_sessions_api.py  test_settings_api.py  test_shell_tool.py  test_skills.py  test_soul.py  test_tool_registry.py  test_tools.py  test_user_state.py  test_websocket.py
daemon/: README.md  requirements.txt  seraph_daemon.py
docs/: openclaw-feature-comparison.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  roadmap.md  sidebars.ts  vision.md
editor/: README.md  (+4 more)
(+77 files in other folders)
