[project]
name = "backend"
version = "0.1.0"
description = "Seraph's backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "litellm>=1.50.0",
    "smolagents[litellm]>=1.24.0",
    "mcp>=1.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "duckduckgo-search>=7.0.0",
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
